updated references for submission

--- a/References/ToE_Ref.bib
+++ b/References/ToE_Ref.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Wed, 25 Nov 2020.
+%% Created using Papers on Wed, 10 Mar 2021.
 %% http://papersapp.com/papers/
 
 @article{Gaines:2018sg,
@@ -57,6 +57,17 @@ author = {Giraudoux, Patrick},
 title = {{Package pgirmess; Spatial Analysis and Data Mining for Field Ecologists}},
 year = {2018},
 pages = {GPL--2}
+}
+
+@article{Sumaila:2019ew,
+author = {Sumaila, U Rashid and Tai, Travis C and Lam, Vicky W Y and Cheung, William Wai Lung and Bailey, Megan and Cisneros-Montemayor, Andr{\'e}s Miguel and Chen, Oai Li and Gulati, Sumeet S},
+title = {{Benefits of the Paris Agreement to ocean life, economies, and people}},
+journal = {Science Advances},
+year = {2019},
+volume = {5},
+number = {2},
+pages = {eaau3855},
+month = feb
 }
 
 @article{Riahi:2011dk,
@@ -158,17 +169,6 @@ journal = {Science Advances},
 volume = {in revission}
 }
 
-@incollection{Song:2017va,
-author = {Song, A and Temby, O and Krantzberg, Gail and Hickey, Gordon M},
-title = {{Institutional Features of US-Canadian Transboundary Fisheries Governance}},
-booktitle = {Towards Continental Environmental Policy},
-year = {2017},
-editor = {Temby, O and Stoett, Peter J},
-pages = {156--179},
-publisher = {books.google.com},
-address = {New York}
-}
-
 @article{UnitedNations:1986tl,
 author = {{United Nations}},
 title = {{United Nations Convention on the Law of the Sea (UNCLOS) - Part V}},
@@ -185,15 +185,12 @@ pages = {101921},
 month = jul
 }
 
-@incollection{Johnson:2017ev,
-author = {Johnson, Johanna E and Bell, Johann D and Allain, Valerie and Hanich, Quentin and Lehodey, Patrick and Moore, Brad R and Nicol, Simon and Pickering, Tim and Senina, Inna},
-title = {{The Pacific Island Region: Fisheries, Aquaculture and Climate Change}},
-booktitle = {Climate Change Impacts on Fisheries and Aquaculture},
-year = {2017},
-pages = {333--379},
-publisher = {John Wiley {\&} Sons, Ltd},
-address = {Chichester, UK},
-month = sep
+@article{PackagekableExtra:2019td,
+author = {Zhu, Hao},
+title = {{Package kableExtra; Construct Complex Table with 'kable' and Pipe Syntax}},
+year = {2019},
+volume = {R ($\ge$ 3.1.0)},
+pages = {MIT}
 }
 
 @webpage{UnitedNations2018,
@@ -203,20 +200,34 @@ year = {2018},
 url = {https://www.un.org/sustainabledevelopment/sustainable-development-goals/}
 }
 
-@article{PackagekableExtra:2019td,
-author = {Zhu, Hao},
-title = {{Package kableExtra; Construct Complex Table with 'kable' and Pipe Syntax}},
-year = {2019},
-volume = {R ($\ge$ 3.1.0)},
-pages = {MIT}
+@article{PackagenlmeLinear:2020ut,
+author = {{Pinheiro, Jos{\'e}} and {Bates, Douglas}},
+title = {{Hot fish: The response to climate change by regional fisheries bodies}},
+journal = {Marine Policy},
+year = {2021},
+volume = {123},
+pages = {104284},
+month = jan
 }
 
-@article{PackagenlmeLinear:2020ut,
-author = {Pinheiro, Jos{\'e} and Bates, Douglas},
-title = {{Package nlme; Linear and Nonlinear Mixed Effects Models}},
+@article{Last:2011fd,
+author = {Last, Peter R and White, William T and Gledhill, Daniel C and Hobday, Alistair J and Brown, Rebecca and Edgar, Graham J and Pecl, Gretta},
+title = {{Long-term shifts in abundance and distribution of a temperate fish fauna: a response to climate change and fishing practices}},
+journal = {Global Ecology and Biogeography},
+year = {2011},
+volume = {20},
+number = {1},
+pages = {58--72},
+month = jan
+}
+
+@article{Reygondeau:2020jh,
+author = {Reygondeau, Gabriel and Cheung, William Wai Lung and Wabnitz, Colette C C and Lam, Vicky W Y and Fr{\"o}licher, Thomas and Maury, Olivier},
+title = {{Climate Change-Induced Emergence of Novel Biogeochemical Provinces}},
+journal = {Frontiers in Marine Science},
 year = {2020},
-volume = {R (>= 3.4.0)},
-pages = {GPL (>= 2)}
+volume = {7},
+month = oct
 }
 
 @article{Song:2017iua,
@@ -238,6 +249,16 @@ year = {2018},
 volume = {361},
 number = {6408},
 pages = {1208--1209}
+}
+
+@article{Frolicher:2020cc,
+author = {Fr{\"o}licher, Thomas L and Ramseyer, Luca and Raible, Christoph C and Rodgers, Keith B and Dunne, John},
+title = {{Potential predictability of marine ecosystem drivers}},
+journal = {Biogeosciences},
+year = {2020},
+volume = {17},
+number = {7},
+pages = {2061--2083}
 }
 
 @article{Ramesh:2019va,
@@ -380,6 +401,32 @@ year = {2018},
 pages = {MIT}
 }
 
+@techreport{Douglas:2010Mb,
+author = {Douglas, D C},
+title = {{\textbf{Arctic Sea Ice Decline: Projected Changes in Timing and Extent of Sea Ice in the Bering and Chukchi Seas}}},
+year = {2010},
+number = {Open-File Report 2010{\textendash}1176},
+address = {Resto, Virginia, US}
+}
+
+@article{MAP:2017uf,
+author = {{MAP}},
+title = {{Dictamen de Extracci{\'o}n No Perjudicial (DENP) de la poblaci{\'o}n de "tibur{\'o}n martillo" \emph{Sphyrna zygaena}. Oficio N.{\textdegree} 1038-2017-PRODUCE/DGPCHDI (Tra. N.{\textdegree} 18254-2017)}},
+journal = {Ministerio del Ambiente, Viceministerio de Desarrollo Estrat{\'e}gico de los Recursos Naturales, Peru},
+year = {2017}
+}
+
+@article{Bailey:2010ga,
+author = {Bailey, Megan and Sumaila, U. Rashid and Lindroos, Marko},
+title = {{Application of game theory to fisheries over three decades}},
+journal = {Journal of Environmental Economics and Management},
+year = {2010},
+volume = {102},
+number = {1-2},
+pages = {1--8},
+month = feb
+}
+
 @article{Keller:2014jv,
 author = {Keller, K M and Joos, F and Raible, C C},
 title = {{Time of emergence of trends in ocean biogeochemistry}},
@@ -436,6 +483,17 @@ volume = {23},
 number = {5},
 pages = {2047--2057},
 month = feb
+}
+
+@article{Sumaila:2011bq,
+author = {Sumaila, U Rashid and Cheung, William Wai Lung and Lam, Vicky W Y and Pauly, Daniel and Herrick, Samuel},
+title = {{Climate change impacts on the biophysics and economics of world fisheries}},
+journal = {Nature Climate Change},
+year = {2011},
+volume = {1},
+number = {9},
+pages = {1--8},
+month = nov
 }
 
 @article{PackagemomensMome:2015uh,
@@ -519,12 +577,33 @@ volume = {16},
 pages = {24--35}
 }
 
+@article{Sumaila:2020tp,
+author = {Sumaila, U Rashid and Palacios-Abrantes, Juliano and Cheung, William Wai Lung},
+title = {{Climate change, shifting threat points, and the management of transboundary fish stocks}},
+journal = {Ecology and Society},
+year = {2020},
+volume = {25},
+number = {4},
+pages = {art40--9}
+}
+
 @article{PackageknitrAGen:2020wta,
 author = {Xie, Yihui},
 title = {{Package knitr; A General-Purpose Package for Dynamic Report Generation in R}},
 year = {2020},
 volume = {R ($\ge$ 3.2.3)},
 pages = {GPL--2 | GPL--3 }
+}
+
+@article{Pecl:2017hu,
+author = {Pecl, Gretta T and Ara{\'u}jo, Miguel B and Bell, Johann D and Blanchard, Julia and Bonebrake, Timothy C and Chen, I-Ching and Clark, Timothy D and Colwell, Robert K and Danielsen, Finn and Eveng{\aa}rd, Birgitta and Falconi, Lorena and Ferrier, Simon and Frusher, Stewart and Garcia, Raquel A and Griffis, Roger B and Hobday, Alistair J and Janion-Scheepers, Charlene and Jarzyna, Marta A and Jennings, Sarah and Lenoir, Jonathan and Linnetved, Hlif I and Martin, Victoria Y and McCormack, Phillipa C and McDonald, Jan and Mitchell, Nicola J and Mustonen, Tero and Pandolfi, John M and Pettorelli, Nathalie and Popova, Ekaterina and Robinson, Sharon A and Scheffers, Brett R and Shaw, Justine D and Sorte, Cascade J B and Strugnell, Jan M and Sunday, Jennifer M and Tuanmu, Mao-Ning and Verg{\'e}s, Adriana and Villanueva, Cecilia and Wernberg, Thomas and Wapstra, Erik and Williams, Stephen E},
+title = {{Biodiversity redistribution under climate change: Impacts on ecosystems and human well-being}},
+journal = {Science},
+year = {2017},
+volume = {355},
+number = {6332},
+pages = {eaai9214},
+month = mar
 }
 
 @article{Roemmich:2015id,
@@ -576,6 +655,16 @@ pages = {034009},
 month = jul
 }
 
+@article{Clark:1975uu,
+author = {Clark, Colin W and Munro, Gordon R},
+title = {{The Economics of Fishing and modern Capital Theory: A Simplified Approach}},
+journal = {Journal of Environmental Economics and Management},
+year = {1975},
+number = {2},
+pages = {92--106},
+month = feb
+}
+
 @article{Spijkers:2018iv,
 author = {Spijkers, Jessica and Morrison, Tiffany H and Blasiak, Robert and Cumming, Graeme S and Osborne, Matthew and Watson, James and {\"O}sterblom, Henrik},
 title = {{Marine fisheries and future ocean conflict}},
@@ -602,6 +691,25 @@ author = {{AquaMaps}},
 title = {{Computer generated distribution maps for~\emph{Pleoticus  muelleri}~(Argentine red shrimp), with modelled year 2050 native range map based on IPCC RCP8.5 emissions scenario.}},
 year = {2019},
 url = {https://www.aquamaps.org/receive.php?type_of_map=regular}
+}
+
+@article{CisnerosMata:2019ks,
+author = {Cisneros-Mata, Miguel Angel and Mangin, Tracey and Bone, Jennifer and Rodriguez, Laura and Smith, Sarah Lindley and Gaines, Steven D},
+title = {{Fisheries governance in the face of climate change: Assessment of policy reform implications for Mexican fisheries.}},
+journal = {PLoS ONE},
+year = {2019},
+volume = {14},
+number = {10},
+pages = {e0222317}
+}
+
+@webpage{UnitedNations:1Qe8KIcN,
+author = {{United Nations}},
+title = {{Transforming our world: the 2030 Agenda for Sustainable Development
+
+}},
+year = {2020},
+url = {https://sdgs.un.org/2030agenda}
 }
 
 @book{IPCC:2018ws,
@@ -643,6 +751,26 @@ pages = {285--294},
 month = feb
 }
 
+@book{Munro:2002uf,
+author = {Miller, K and Munro, Gordon},
+title = {{Cooperation and Conflicts in the Management of Transboundary Fishery Resources}},
+publisher = {Proceeding of the Second World Conference of the Second World Congress of the American and European Associations of Environmental and Resource Economics},
+year = {2002},
+series = {Proceeding of the Second World Conference of the Second World Congress of the American; European Associations of Environmental; Resource Economics},
+address = {Monterey, California}
+}
+
+@article{Cheung:2009ud,
+author = {Cheung, William Wai Lung and Lam, Vicky W Y and Sarmiento, Jorge L and Kearney, Kelly and Watson, Reg and Pauly, Daniel},
+title = {{Projecting global marine biodiversity impacts under climate change scenarios}},
+journal = {Fish and Fisheries},
+year = {2009},
+volume = {10},
+number = {3},
+pages = {235--251},
+month = sep
+}
+
 @article{Cheung:2013gk,
 author = {Cheung, William Wai Lung and Watson, Reg and Pauly, Daniel},
 title = {{Signature of ocean warming in global fisheries catch}},
@@ -668,6 +796,16 @@ year = {2021},
 volume = {123},
 pages = {104284},
 month = jan
+}
+
+@article{PalaciosAbrantes:2020vt,
+author = {Palacios-Abrantes, Juliano and Sumaila, U Rashid and Cheung, William Wai Lung},
+title = {{Challenges to transboundary fisheries management in North America under climate change}},
+journal = {Ecology and Society},
+year = {2020},
+volume = {25},
+number = {4},
+pages = {art41--17}
 }
 
 @article{CowplotStreamlined:2019wt,
@@ -753,11 +891,36 @@ pages = {1--11},
 month = oct
 }
 
-@article{PalaciosAbrantes:2020vt,
-author = {Palacios-Abrantes, Juliano and Sumaila, U. Rashid and Cheung, William Wai Lung},
-title = {{Challenges to transboundary fisheries management in North America under climate change}},
+@article{Yeeting:2018gm,
+author = {Yeeting, Agnes David and Weikard, Hans-Peter and Bailey, Megan and Ram-Bidesi, Vina and Bush, Simon R},
+title = {{Stabilising cooperation through pragmatic tolerance: the case of the Parties to the Nauru Agreement (PNA) tuna fishery}},
+journal = {Regional Environmental Change},
+year = {2018},
+volume = {18},
+number = {3},
+pages = {885--897},
+month = nov
+}
+
+@article{Pinsky:2020jx,
+author = {Pinsky, M L and Rogers, L A and Morley, J W and Fr{\"o}licher, T L},
+title = {{Ocean planning for species on the move provides substantial benefits and requires few trade-offs}},
+journal = {Science Advances},
+year = {2020},
+volume = {6},
+number = {50},
+pages = {eabb8428},
+month = dec
+}
+
+@article{Engler:2020bg,
+author = {Engler, Cecilia},
+title = {{Transboundary fisheries, climate change, and the ecosystem approach: taking stock of the international law and policy seascape}},
 journal = {Ecology and Society},
-pages = {(In press)}
+year = {2020},
+volume = {25},
+number = {4},
+pages = {art43--13}
 }
 
 @techreport{Munro:2004th,
@@ -775,6 +938,16 @@ volume = {R (>= 3.1.0)},
 pages = {MPL--2.0 | file LICENSE}
 }
 
+@book{Gronbaek:2020ei,
+author = {Gronbaek, Lone and Lindroos, Marko and Munro, Gordon and Pintassilgo, Pedro},
+title = {{Game Theory and Fisheries Management}},
+publisher = {Springer Nature},
+year = {2020},
+series = {Theory and Applications},
+address = {Cham},
+month = mar
+}
+
 @article{Frainer:2017ji,
 author = {Frainer, Andr{\'e} and Primicerio, Raul and Kortsch, Susanne and Aune, Magnus and Dolgov, Andrey V and Fossheim, Maria and Aschan, Michaela M},
 title = {{Climate-driven changes in functional biogeography of Arctic marine fish communities}},
@@ -783,6 +956,16 @@ year = {2017},
 volume = {10},
 pages = {201706080--7},
 month = oct
+}
+
+@article{Cheung:2016tt,
+author = {Cheung, William Wai Lung and Reygondeau, G and Fr{\"o}licher, T L},
+title = {{Large benefits to marine fisheries of meeting the 1.5 C global warming target}},
+journal = {Science},
+year = {2016},
+volume = {354},
+number = {6319},
+pages = {1591--1594}
 }
 
 @article{Henson:2017ev,
@@ -803,6 +986,16 @@ journal = {Ecological Modelling},
 year = {2016},
 volume = {325},
 pages = {57--66}
+}
+
+@article{Crespo:2020cs,
+author = {Crespo, G O and Mossop, J and Dunn, D and Gjerde, K and Reygondeau, Gabriel and Warner, Robin and Tittensor, Derek P and Halpin, Patrick},
+title = {{Beyond static spatial management: Scientific and legal considerations for dynamic management in the high seas}},
+journal = {Journal of Environmental Economics and Management},
+year = {2020},
+volume = {122},
+number = {104102},
+pages = {10}
 }
 
 @article{Kaplan:2016hs,
@@ -832,6 +1025,16 @@ volume = {39},
 number = {1},
 pages = {n/a--n/a},
 month = jan
+}
+
+@article{Burger:2020jr,
+author = {Burger, Friedrich A and John, Jasmin G and Fr{\"o}licher, Thomas L},
+title = {{Increase in ocean acidity variability and extremes under increasing atmospheric CO{\&}lt;sub{\&}gt;2{\&}lt;/sub{\&}gt;}},
+journal = {Biogeosciences},
+year = {2020},
+volume = {17},
+number = {18},
+pages = {4633--4662}
 }
 
 @article{CisnerosMontemayor:2016gq,
@@ -1116,12 +1319,6 @@ pages = {1--10},
 month = apr
 }
 
-@article{Sumaila:2020tp,
-author = {Sumaila, U. Rashid and Palacios-Abrantes, Juliano and Cheung, William Wai Lung},
-title = {{Climate change, shifting threat points and the management of transboundary fish stocks}},
-journal = {Ecology and Society}
-}
-
 @article{Archambault:2016ie,
 author = {Archambault, Benoit and Le Pape, Olivier and Baulier, Loic and Vermard, Youen and V{\'e}ron, Matthieu and Rivot, Etienne},
 title = {{Adult-mediated connectivity affects inferences on population dynamics and stock assessment of nursery-dependent fish populations}},
@@ -1129,6 +1326,17 @@ journal = {Journal of Environmental Economics and Management},
 year = {2016},
 volume = {181},
 pages = {198--213},
+month = sep
+}
+
+@article{Cheung:0ur,
+author = {Lefevre, Sjannie and McKenzie, David J and Nilsson, G{\"o}ran E},
+title = {{In modelling effects of global warming, invalid assumptions lead to unrealistic projections}},
+journal = {Global Change Biology},
+year = {2017},
+volume = {24},
+number = {2},
+pages = {553--556},
 month = sep
 }
 
@@ -1142,11 +1350,14 @@ series = {Working Group II Contribution to the Fifth Assessment Report of the In
 address = {Cambridge}
 }
 
-@article{Cheung:0ur,
-author = {Cheung, William Wai Lung and Fr{\"o}licher, T L and Lam, V W Y and Oyinlola, M A and Reygondeau, G and Sumaila, U R and Tai, T C and Teh, L C L and Wabnitz, C C C},
-title = {{~Marine~Heatwaves~amplify the impacts of climate change on fish and fisheries. Science.}},
-journal = {Science},
-year = {0}
+@article{Oremus:2020id,
+author = {Oremus, Kimberly L and Bone, Jennifer and Costello, Christopher and Molinos, Jorge Garc{\'\i}a and Lee, Alice and Mangin, Tracey and Salzman, James},
+title = {{Governance challenges for tropical nations losing fish species due to climate change}},
+journal = {Nature Sustainability},
+year = {2020},
+volume = {6},
+pages = {1--4},
+month = feb
 }
 
 @article{Rodgers:2015jq,
@@ -1160,13 +1371,15 @@ pages = {3301--3320},
 month = jun
 }
 
-@article{Oremus:2020id,
-author = {Oremus, Kimberly L and Bone, Jennifer and Costello, Christopher and Molinos, Jorge Garc{\'\i}a and Lee, Alice and Mangin, Tracey and Salzman, James},
-title = {{Governance challenges for tropical nations losing fish species due to climate change}},
-journal = {Nature Sustainability},
-year = {2020},
-volume = {6},
-pages = {1--4},
-month = feb
+@incollection{Bailey:2016eh,
+author = {Bailey, M and Vestergaard, Niels and Sumaila, U Rashid},
+title = {{Overcoming Principal{\textendash}Agent Problems to Improve Cooperative Governance of Internationally Shared Fisheries}},
+booktitle = {The WSPC Reference on Natural Resources and Environmental Policy in the Era of Global Change},
+year = {2016},
+editor = {Dinar, Ariel and Espinola-Arredondo, Ana and Munoz-Garcia, Felix},
+pages = {1--27},
+publisher = {World Scientific
+},
+address = {New Jersey, USA}
 }
 
