Updated manuscript with title and Alessandro's comments

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -1,18 +1,12 @@
 ---
-title: Identifying timing of shifts in transboundary fish stocks to support climate resilient fisheries management
-
+title: "Early range shifts in transboundary fish stocks challenge their management under climate change"
 author: 'Authors: Juliano Palacios-Abrantes^1*^, Thomas Frölicher^2,3^, Gabriel Reygondeau^1^, U. Rashid Sumaila^1^, Alessandro Tagliabue^4^, Colette Wabnitz^1,5^, and William W.L. Cheung^1^'
 date: 'Affiliations: ^1^Institute for the Oceans and Fisheries, University of British Columbia, Vancouver, Canada. ^2^Climate and Environmental Physics, Physics Institute, University of Bern. ^3^Oeschger Centre for Climate Change Research, University of Bern, Switzerland. ^4^School of Environmental Sciences, University of Liverpool. ^5^Stanford Center for Ocean Solutions, Stanford University, Stanford, United States'
-output:
-  bookdown::word_document2
-reference_docx:  ../References/manuscript_template.docx
+output: bookdown::word_document2
+reference_docx:  ../References/sci_template.docx
   # pdf_document: default
 bibliography: ../References/ToE_Ref.bib
 csl: ../References/science.csl
-header-includes:
-- \usepackage{amsmath}
-- \usepackage{float} # Use the 'float' package
-- \floatplacement{figure}{H} # Make every figure with caption = h
 ---
 
 <!-- # Instructions  -->
@@ -61,7 +55,7 @@ Climate change is shifting the distribution of transboundary fish stocks between
 
 **One-Sentence Summary**
 
-Early range shifts in transboundary fish stocks challenge their management under climate change
+Rapid climate-induced shifts in transboundary fish stocks
 
 **Main Text.**
 
@@ -152,7 +146,7 @@ Management plans that are not prepared to respond to range and abundance shifts 
 
 The early projected range shifts of the large number of transboundary stocks can be partially attributed to the parallel global emergence of several ocean variables from historical variability [@Rodgers:2015jq; @Frolicher:2016dg; @Mahlstein:2011fy]. Specifically, Frölicher et al., 2016 estimated the time of emergence of dissolved oxygen ($O_2$ between 100-600m), natural primary production (NPP), and sea surface temperature (SST) relative to historical variability (1986-2005). By 2030, the SST signal will have emerged from historical variability for 70% of the global ocean under RCP 8.5 [@Frolicher:2016dg]. Early emergence of SST will occur mainly in the tropics while the Southern Ocean and the North Atlantic are not expected to experience an emergence on the SST signal before 2100 [@Reygondeau:2020jh; @Frolicher:2016dg]. For NPP and $O_2$, the signal is projected to emerge in 23% and 10% of the ocean by the end of the $21^st$ century, respectively under RCP 8.5 [@Frolicher:2016dg]. Results from multiple marine ecosystem models show that SST and NPP are the main drivers of changes in species distributions across oceanic basins [@BryndumBuchholz:2019kh; @Lotze:2019ce]. Specifically for the DBEM, SST is the main environmental driver of biomass changes in polar, tropical and upwelling ecosystems while NPP drives temperate regions’ results [@Cheung:2016tt]. The combination of the SST emergence pattern and model characteristics could be partially responsible for the early distributional shift of transboundary stocks in the tropics where marine species live close to their thermal tolerance, making them highly vulnerable to warming waters [@IPCC:2014bz], while also explaining the later, and sometimes non-existent, shift at higher latitudes (Fig. \@ref(fig:toeFigure2)B).
 
-Different levels of uncertainty exist in the projected emergence of environmental variables, mainly related to *i*) climate change scenarios and  *ii*) model structure [@Frolicher:2016dg]. First, our analysis is based on a high emission scenario (RCP 8.5) representing an extreme case of shifts in the shared distribution of transboundary species. Thus, any climate change mitigation pathway (e.g., RCP 2.6) could result in a substantial delay in distribution shifts as environmental signals are sensitive to mitigation, at least after the middle of the $21^{st}$ century [@Frolicher:2016dg]. Second, a substantial source of uncertainty is related to model selection for both climate change and fisheries distribution. This is specifically important for early time periods (e.g., 2016-2035) where the uncertainty related to the emergence of environmental drivers is larger but that to scenarios is lower [@Frolicher:2016dg]. While such uncertainty could potentially be reduced by incorporating  ensemble simulations from a range of different ESMs, these are computationally expensive simulations [@Frolicher:2009ge; @Frolicher:2016dg; @Rodgers:2015jq]. As a consequence, transboundary fisheries managers are facing changes in stocks’ shared distributions embedded in complex uncertainties, and will likely continue to do so in the coming decade. This is critical for the tropics, where the shared distribution of transboundary stocks is expected to shift the earliest, and where internal variability (e.g., ENSO for Pacific nations) accounts for most of the uncertainty. Model uncertainty also affects the way we project species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Exercises looking at changes in fish biomass with multiple models, including the DBEM, show overall agreement across models in terms of direction of change, but variability in the magnitude of that change [@BryndumBuchholz:2019kh]. Further research that includes large ensemble simulations of multiple species distribution models could elucidate a broader range in structural uncertainty of fish and fisheries models [@Lotze:2019ce]. Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results in changes in both time of emergence and stock share ratio of transboundary stocks, and potentially identity different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
+Different levels of uncertainty exist in the projected emergence of environmental variables mainly related to *i*) climate change scenarios and  *ii*) model structure [@Frolicher:2016dg]. First, our analysis is based on a high emission scenario (RCP 8.5) representing an extreme case of shifts in the shared distribution of transboundary species. Thus, any climate change mitigation pathway (e.g., RCP 2.6) could result in a substantial delay in distribution shifts as environmental signals are sensitive to mitigation, at least after the middle of the $21^{st}$ century [@Frolicher:2016dg]. Second, a substantial source of uncertainty is related to model selection for both climate change and fisheries distribution. This is specifically important for early time periods (e.g., 2016-2035) where the uncertainty related to the emergence of environmental drivers is larger but that to scenarios is lower [@Frolicher:2016dg]. While such uncertainty could potentially be reduced by incorporating  ensemble simulations from a range of different ESMs, these are computationally expensive simulations [@Frolicher:2009ge; @Frolicher:2016dg; @Rodgers:2015jq] and they ignore other sources of structural uncertainty based on the parameterisation of processes. As a consequence, transboundary fisheries managers are facing changes in stocks’ shared distributions embedded in complex uncertainties, and will likely continue to do so in the coming decade. This is critical for the tropics, where the shared distribution of transboundary stocks is expected to shift the earliest, the response of the base of the food web to climate change is most uncertain [@Tagliabue:2020hd; @Kwiatkowski:2020cf] and where internal variability (e.g., El Niño Southern Oscillation - ENSO- for Pacific nations) is also important . These uncertainties also affect the projection of species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Overall, changes in fish biomass with multiple upper trophic level models, including the DBEM, show overall agreement across models in terms of direction of change, but variability in the magnitude of that change [@BryndumBuchholz:2019kh]. Further research that reduces uncertainty in the response of the base of ocean food webs, alongside large ensemble simulations of multiple species distribution models could elucidate a broader range in structural uncertainty of fish and fisheries models [@Lotze:2019ce]. Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results in changes in both time of emergence and stock share ratio of transboundary stocks, and potentially identity different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
 
 **Conclusion**
 
